--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <version>5.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.2.0-0</version>
+        </dependency>
+
+
     </dependencies>
 
 
